--- a/gui/templates/template_gui/gui.html
+++ b/gui/templates/template_gui/gui.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>PyFSM</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}"/>
     <style>
 
     </style>
@@ -95,7 +94,7 @@
                                             <label>Start State:</label>
                                             <input type="text" id="start" name="start" class="form-control ml-2" placeholder="Start State">
                                         </div>
-                                        <div id="moore_0" class="form-inline mb-3">
+                                        <div id="moore_0" class="form-inline mb-3" name="0">
                                             <input class="form-control" type="text" name="state_name0" placeholder="State Name"> <span class="ml-2 mr-2">gives</span>
                                                 <input class="form-control" type="text"
                                                        name="state_output0"
@@ -106,7 +105,7 @@
                                     </button>
                                     <hr>
                                     <div class="form-inline mb-3" id="transition_container">
-                                        <div id="tmoore_0">
+                                        <div id="tmoore_0" name="0" class="mb-2">
                                             <h3>Transition Description</h3>
                                             <input class="form-control" type="text" name="state0" placeholder="Present State"> <span class="ml-2 mr-2">to</span> <input
                                                     class="form-control" type="text"
@@ -147,7 +146,7 @@
                                                 <label>Start State:</label>
                                                 <input type="text" id="mstart" name="mstart" class="form-control ml-2" placeholder="Start State">
                                             </div>
-                                            <div id="mealy_0" class="form-inline mb-3">
+                                            <div id="mealy_0" class="form-inline mb-3" name="0">
                                                 <input class="form-control" type="text" name="mstate_name0" placeholder="State Name">
                                             </div>
                                         </div>
@@ -155,7 +154,7 @@
                                         </button>
                                         <hr>
                                         <div class="form-inline mb-3" id="mtransition_container">
-                                            <div id="tmealy_0">
+                                            <div id="tmealy_0" name="0" class="mb-2">
                                                 <h3>Transition Description</h3>
                                                 <input class="form-control" type="text" name="mstate0" placeholder="Present State"> <span class="ml-2 mr-2">to</span> <input
                                                     class="form-control" type="text"
@@ -328,5 +327,8 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 <script src="{% static 'scripti.js' %}"></script>
+<script type="text/javascript">
+	select_type();
+</script>
 </body>
 </html>
