--- a/gui/templates/template_gui/gui.html
+++ b/gui/templates/template_gui/gui.html
@@ -100,10 +100,11 @@
                                         </div>
                                         <div id="moore_0" class="form-inline mb-3" name="0">
                                             <input class="form-control" type="text" name="state_name0"
-                                                   placeholder="State Name" required> <span class="ml-2 mr-2">gives</span>
+                                                   placeholder="State Name"> <span
+                                                class="ml-2 mr-2">gives</span>
                                             <input class="form-control" type="text"
                                                    name="state_output0"
-                                                   placeholder="State Output" required>
+                                                   placeholder="State Output">
                                         </div>
                                     </div>
                                     <button type="button" class="btn btn-primary" onclick="func('moore')">Add State
@@ -113,11 +114,12 @@
                                         <h3>Transition Description</h3>
                                         <div id="tmoore_0" name="0" class="form-inline mb-3">
                                             <input class="form-control" type="text" name="state0"
-                                                   placeholder="Present State" required> <span class="ml-2 mr-2">to</span> <input
+                                                   placeholder="Present State"> <span
+                                                class="ml-2 mr-2">to</span> <input
                                                 class="form-control" type="text"
                                                 name="next_state0"
-                                                placeholder="Next State" required> <span class="ml-2 mr-2">on</span>
-                                            <input class="form-control" type="text" name="input0" placeholder="Input" required>
+                                                placeholder="Next State"> <span class="ml-2 mr-2">on</span>
+                                            <input class="form-control" type="text" name="input0" placeholder="Input">
                                         </div>
                                     </div>
                                     <button type="button" class="btn btn-primary" onclick="funci('moore')">Add
@@ -125,6 +127,16 @@
                                     </button>
                                     <hr>
                                     <br>
+                                    <h3>Testbench Generation (optional)</h3>
+                                    <div class="form-inline mb-2">
+                                        <input class="form-control" type="text" name="test_in"
+                                               placeholder="Testing Sequence">
+                                    </div>
+                                    <div class="form-group" id="constraints_container">
+                                        <h3>Constraints (Optional)</h3>
+                                        <textarea class="form-control" id="constraints" name="constraints"
+                                                  rows="5" placeholder="connect clk to BUTTON M"></textarea>
+                                    </div>
                                     <button type="submit" class="btn btn-success form-control">Submit</button>
                                 </div>
                                 <div id="mealy" style="display: none;">
@@ -157,7 +169,7 @@
                                         </div>
                                         <div id="mealy_0" class="form-inline mb-3" name="0">
                                             <input class="form-control" type="text" name="mstate_name0"
-                                                   placeholder="State Name" required>
+                                                   placeholder="State Name">
                                         </div>
                                     </div>
                                     <button type="button" class="btn btn-primary" onclick="func('mealy')">Add State
@@ -167,14 +179,15 @@
                                         <h3>Transition Description</h3>
                                         <div id="tmealy_0" name="0" class="form-inline mb-3">
                                             <input class="form-control" type="text" name="mstate0"
-                                                   placeholder="Present State" required> <span class="ml-2 mr-2">to</span> <input
+                                                   placeholder="Present State"> <span
+                                                class="ml-2 mr-2">to</span> <input
                                                 class="form-control" type="text"
                                                 name="mnext_state0"
-                                                placeholder="Next State" required> <span class="ml-2 mr-2">on</span>
-                                            <input class="form-control" type="text" name="minput0" placeholder="Input" required>
+                                                placeholder="Next State"> <span class="ml-2 mr-2">on</span>
+                                            <input class="form-control" type="text" name="minput0" placeholder="Input">
                                             <span class="ml-2 mr-2">gives</span>
                                             <input class="form-control" type="text" name="moutput0"
-                                                   placeholder="Output" required>
+                                                   placeholder="Output">
                                         </div>
                                     </div>
                                     <button type="button" class="btn btn-primary" onclick="funci('mealy')">Add
@@ -182,6 +195,16 @@
                                     </button>
                                     <hr>
                                     <br>
+                                    <h3>Testbench Generation (optional)</h3>
+                                    <div class="form-inline mb-2">
+                                        <input class="form-control" type="text" name="mtest_in"
+                                               placeholder="Testing Sequence">
+                                    </div>
+                                    <div class="form-group" id="mconstraints_container">
+                                        <h3>Constraints (Optional)</h3>
+                                        <textarea class="form-control" id="mconstraints" name="mconstraints"
+                                                  rows="5" placeholder="connect clk to BUTTON M"></textarea>
+                                    </div>
                                     <button type="submit" class="btn btn-success form-control">Submit</button>
                                 </div>
                             </form>
@@ -229,6 +252,62 @@
                                     <label>Test Bench Sequence:</label>
                                     <input class="form-control ml-2" type="text" id="TB" name="tb"
                                            placeholder="Test Bench Sequence">
+                                </div>
+                                <div class="mb-2">
+                                    <button type="button" class="btn btn-primary" id="display" onclick="display_d()">Add
+                                        Constraints
+                                    </button>
+                                </div>
+                                <div id="seq_constraints_container" class="form-group" style="display: none;">
+                                    <div class="form-inline mb-3">
+                                        <span class="ml-2 mr-2">Connect Clock with </span>
+                                        <div class="dropdown form-inline mb-3">
+                                            <select class="form-control ml-2" name="clk"
+                                                    onchange="halwa(value + 'clk_no')">
+                                                <option value="button">BUTTON</option>
+                                                <option value="switch" selected="selected">
+                                                    SWITCH
+                                                </option>
+                                            </select>
+                                            <input class="form-control ml-2" type="text" id="clk_no" name="clk_no"
+                                                   placeholder="Number">
+                                        </div>
+                                    </div>
+                                    <div class="form-inline mb-3">
+                                        <span class="ml-2 mr-2">Connect Reset with </span>
+                                        <div class="dropdown form-inline mb-3">
+                                            <select class="form-control ml-2" name="reset"
+                                                    onchange="halwa(value + 'rst_no')">
+                                                <option value="button">BUTTON</option>
+                                                <option value="switch" selected="selected">
+                                                    SWITCH
+                                                </option>
+                                            </select>
+                                            <input class="form-control ml-2" type="text" id="rst_no" name="rst_no"
+                                                   placeholder="Number">
+                                        </div>
+                                    </div>
+                                    <div class="form-inline mb-3">
+                                        <span class="ml-2 mr-2">Connect Input with </span>
+                                        <div class="dropdown form-inline mb-3">
+                                            <select class="form-control ml-2" name="input_pin"
+                                                    onchange="halwa(value + 'inp_no')">
+                                                <option value="button">BUTTON</option>
+                                                <option value="switch" selected="selected">
+                                                    SWITCH
+                                                </option>
+                                            </select>
+                                            <input class="form-control ml-2" type="text" id="inp_no" name="inp_no"
+                                                   placeholder="Number">
+                                        </div>
+                                    </div>
+                                    <div class="form-inline mb-3">
+                                        <span class="ml-2 mr-2">Connect Output with LED </span>
+                                        <div class="dropdown form-inline mb-3">
+                                            <input class="form-control ml-2" type="text" id="out_no" name="out_no"
+                                                   placeholder="Number">
+                                        </div>
+                                    </div>
                                 </div>
                                 <button type="submit" class="form-control btn btn-success">Submit</button>
                             </form>
