tcl-added-to all

--- a/gui/templates/template_gui/gui.html
+++ b/gui/templates/template_gui/gui.html
@@ -264,13 +264,13 @@
                                         <div class="dropdown form-inline mb-3">
                                             <select class="form-control ml-2" name="clk"
                                                     onchange="halwa(value + 'clk_no')">
-                                                <option value="button">BUTTON</option>
-                                                <option value="switch" selected="selected">
+                                                <option value="BUTTON">BUTTON</option>
+                                                <option value="SWITCH" selected="selected">
                                                     SWITCH
                                                 </option>
                                             </select>
                                             <input class="form-control ml-2" type="text" id="clk_no" name="clk_no"
-                                                   placeholder="Number">
+                                                   placeholder="Number" required>
                                         </div>
                                     </div>
                                     <div class="form-inline mb-3">
@@ -278,13 +278,13 @@
                                         <div class="dropdown form-inline mb-3">
                                             <select class="form-control ml-2" name="reset"
                                                     onchange="halwa(value + 'rst_no')">
-                                                <option value="button">BUTTON</option>
-                                                <option value="switch" selected="selected">
+                                                <option value="BUTTON">BUTTON</option>
+                                                <option value="SWITCH" selected="selected">
                                                     SWITCH
                                                 </option>
                                             </select>
                                             <input class="form-control ml-2" type="text" id="rst_no" name="rst_no"
-                                                   placeholder="Number">
+                                                   placeholder="Number" required>
                                         </div>
                                     </div>
                                     <div class="form-inline mb-3">
@@ -292,20 +292,20 @@
                                         <div class="dropdown form-inline mb-3">
                                             <select class="form-control ml-2" name="input_pin"
                                                     onchange="halwa(value + 'inp_no')">
-                                                <option value="button">BUTTON</option>
-                                                <option value="switch" selected="selected">
+                                                <option value="BUTTON">BUTTON</option>
+                                                <option value="SWITCH" selected="selected">
                                                     SWITCH
                                                 </option>
                                             </select>
                                             <input class="form-control ml-2" type="text" id="inp_no" name="inp_no"
-                                                   placeholder="Number">
+                                                   placeholder="Number" required>
                                         </div>
                                     </div>
                                     <div class="form-inline mb-3">
                                         <span class="ml-2 mr-2">Connect Output with LED </span>
                                         <div class="dropdown form-inline mb-3">
                                             <input class="form-control ml-2" type="text" id="out_no" name="out_no"
-                                                   placeholder="Number">
+                                                   placeholder="Number" required>
                                         </div>
                                     </div>
                                 </div>
