minimize-not-working-update

--- a/gui/templates/template_gui/gui.html
+++ b/gui/templates/template_gui/gui.html
@@ -54,6 +54,7 @@
                                     </div>
                                 </div>
                                 <button type="submit" class="form-control btn btn-success">Submit</button>
+                                {% if done %}<h4>Done Uploading</h4>{% endif %}
                             </form>
                         </div>
                     </div>
